--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve-json": "json-server --watch db.json --port=3000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
